# JSONish

./: .gitignore  CMakeLists.txt  README.md
include/jsh/: parse.hpp  result.hpp  tree.hpp
include/jsonish/: parse.hpp  result.hpp  source_position.hpp  tree.hpp
src/: CMakeLists.txt
src/jsh/: lex.cpp  lex.hpp  parse.cpp
src/jsonish/: lex.cpp  lex.hpp  parse.cpp  tree.cpp
tests/: CMakeLists.txt  lex.test.cpp  parse.test.cpp
